--- a/project.config.json
+++ b/project.config.json
@@ -44,13 +44,24 @@
 		"game": {
 			"list": []
 		},
+		"gamePlugin": {
+			"current": -1,
+			"list": []
+		},
 		"miniprogram": {
 			"current": 0,
 			"list": [
 				{
 					"id": -1,
 					"name": "db guide",
-					"pathName": "pages/databaseGuide/databaseGuide"
+					"pathName": "pages/databaseGuide/databaseGuide",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "pages/todo-detail/todo-detail",
+					"pathName": "pages/todo-detail/todo-detail",
+					"scene": null
 				}
 			]
 		}
