--- a/cloudfunctions/querytodolist/package.json
+++ b/cloudfunctions/querytodolist/package.json
@@ -9,6 +9,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "moment": "^2.24.0",
         "wx-server-sdk": "latest"
     }
 }
