--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,18 +1,6 @@
 {
     "pages": [
         "pages/index/index",
-        "pages/userConsole/userConsole",
-        "pages/storageConsole/storageConsole",
-        "pages/databaseGuide/databaseGuide",
-        "pages/addFunction/addFunction",
-        "pages/deployFunctions/deployFunctions",
-        "pages/chooseLib/chooseLib",
-        "pages/openapi/openapi",
-        "pages/openapi/serverapi/serverapi",
-        "pages/openapi/callback/callback",
-        "pages/openapi/cloudid/cloudid",
-        "pages/im/im",
-        "pages/im/room/room",
         "pages/important/important",
         "pages/todo-list/todo-list",
         "pages/todo-detail/todo-detail"
@@ -26,7 +14,8 @@
         "van-checkbox": "@vant/weapp/checkbox",
         "van-cell": "@vant/weapp/cell",
         "van-cell-group": "@vant/weapp/cell-group",
-        "van-datetime-picker": "@vant/weapp/datetime-picker"
+        "van-datetime-picker": "@vant/weapp/datetime-picker",
+        "van-skeleton": "@vant/weapp/skeleton"
     },
     "window": {
         "backgroundColor": "#A9C3F8",
