feat:用户头像与昵称展示&优化

--- a/project.config.json
+++ b/project.config.json
@@ -16,18 +16,24 @@
         "checkInvalidKey": true,
         "checkSiteMap": true,
         "uploadWithSourceMap": true,
+        "useMultiFrameRuntime": false,
+        "useApiHook": false,
+        "useApiHostProcess": false,
         "babelSetting": {
             "ignore": [],
             "disablePlugins": [],
             "outputPath": ""
         },
-        "useMultiFrameRuntime": true,
-        "useApiHook": true,
-        "useApiHostProcess": true
+        "useIsolateContext": true,
+        "userConfirmedBundleSwitch": false,
+        "packNpmManually": false,
+        "packNpmRelationList": [],
+        "minifyWXSS": true,
+        "showES6CompileOption": false
     },
     "appid": "wxc5ee02c56efd9579",
     "projectname": "TodoDone",
-    "libVersion": "2.8.1",
+    "libVersion": "2.18.0",
     "simulatorType": "wechat",
     "simulatorPluginLibVersion": {},
     "cloudfunctionTemplateRoot": "cloudfunctionTemplate",
