--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,11 @@
         "packNpmManually": false,
         "packNpmRelationList": [],
         "minifyWXSS": true,
-        "showES6CompileOption": false
+        "disableUseStrict": false,
+        "minifyWXML": true,
+        "showES6CompileOption": false,
+        "useCompilerPlugins": false,
+        "compileHotReLoad": true
     },
     "appid": "wxc5ee02c56efd9579",
     "projectname": "TodoDone",
